--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,15 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+#build file
+build = "build.rs"
+
+
 [dependencies]
 image = "0.24.0"
 colored = "2"
 clap = "3.0.14"
+
+[build-dependencies]
+clap = "3.0.14"
+clap_complete = "3.0.6"
