--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,32 @@
 [package]
-name = "ascii_image_converter"
+name = "artem"
 version = "0.1.0"
 edition = "2018"
-
+description = "An easy program to convert an image to an ascii image"
+readme = "README.md"
+license = "MPL-2.0"
+license-file = "LICENSE"
+homepage = "https://github.com/finefindus/artem"
+repository = "https://github.com/finefindus/artem"
+catogories = "command-line-utilities"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 #build file
 build = "build.rs"
 
+#bin definition
+[[bin]]
+name = "artem"
+
 
 [build-dependencies]
-clap = "3.0.14"
-clap_complete = "3.0.6"
+clap = "3.1.0"
+clap_complete = "3.1.0"
+clap_mangen = "0.1.2"
+
 
 [dependencies]
 image = "0.24.0"
 colored = "2"
-clap = "3.0.14"
+clap = "3.1.0"
 terminal_size = "0.1.17"
