--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "artem"
-version = "0.1.0"
+version = "0.3.0"
+authors = ["Jonathan (@FineFindus)"]
 edition = "2021"
 description = "An easy program to convert an image to an ascii image"
 readme = "README.md"
@@ -33,3 +34,16 @@ image = "0.24.0"
 colored = "2"
 clap = "3.1.0"
 terminal_size = "0.1.17"
+
+[package.metadata.deb]
+section = "graphics"
+priority = "optional"
+assets = [
+      ["target/release/artem", "usr/bin/", "755"],
+      ["deployment/deb/artem.1", "usr/share/man/man1/artem.1", "644"],
+      #the completion file and man page is generated and copied by the build script
+      ["deployment/deb/artem.bash", "usr/share/bash-completion/completions/artem", "644"],
+]
+extended-description = """\
+artem is a cli project to convert images to ascii art. By default it uses truecolor, if not support it fallsback to ansi colors.
+"""
