--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "artem"
 version = "0.3.0"
-authors = ["Jonathan (@FineFindus)"]
 edition = "2021"
 description = "An easy program to convert an image to an ascii image"
 readme = "README.md"
@@ -38,6 +37,7 @@ terminal_size = "0.1.17"
 [package.metadata.deb]
 section = "graphics"
 priority = "optional"
+copyrigth = "2022, github.com/finefindus"
 assets = [
       ["target/release/artem", "usr/bin/", "755"],
       ["deployment/deb/artem.1", "usr/share/man/man1/artem.1", "644"],
