--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -2,12 +2,18 @@ on: [push]
 
 name: Continuous Integration
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+#cancel 
 jobs:
 
   check:
     name: Check
     #format does not need to run on all platforms
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
@@ -19,7 +25,8 @@ jobs:
           toolchain: stable
           override: true
       #use caching for cargo build 
-      - uses: actions/cache@v2
+      - name: Cache dependencies
+        uses: actions/cache@v2
         with:
           path: |
             ~/.cargo/bin/
@@ -42,6 +49,7 @@ jobs:
         platform: [ubuntu-latest, macos-latest, windows-latest]
       #tests should pass on all platforms
     runs-on: ${{ matrix.platform }}
+    timeout-minutes: 10
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
@@ -53,7 +61,8 @@ jobs:
           toolchain: stable
           override: true
       #use caching for cargo build 
-      - uses: actions/cache@v2
+      - name: Cache dependencies
+        uses: actions/cache@v2
         with:
           path: |
             ~/.cargo/bin/
