--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,10 @@ clap = "3.1.0"
 clap_complete = "3.1.0"
 clap_mangen = "0.1.2"
 
+[dev-dependencies]
+assert_cmd = "2.0.4"
+predicates = "2.1.1"
+
 
 [dependencies]
 image = "0.24.0"
