--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,9 @@ image = "0.24.0"
 colored = "2"
 clap = "3.1.0"
 terminal_size = "0.1.17"
+log = "0.4.0"
+env_logger = "0.9.0"
+
 
 [package.metadata.deb]
 section = "graphics"
