--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -58,7 +58,7 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v2
 
-      - name: Install stable toolchain
+      - name: Install ${{ matrix.rust }} toolchain
         uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{ matrix.rust }}
@@ -81,7 +81,7 @@ jobs:
         continue-on-error: false 
         with:
           command: build 
-          args: --verbose
+          args: --locked --verbose
 
       - name: Run tests
         uses: actions-rs/cargo@v1
@@ -90,7 +90,7 @@ jobs:
           command: test
 
   clippy:
-    name: Check
+    name: Clippy
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
@@ -117,7 +117,7 @@ jobs:
 
         #install and run clippy
       - run: rustup component add clippy
-      - name: Run cargo clippy
+      - name: Run clippy
         uses: actions-rs/cargo@v1
         with:
           command: clippy
