Fixed error in release_build.yaml

--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -10,7 +10,7 @@ on:
     # tags:
     # - "[0-9]+.[0-9]+.[0-9]+"
 jobs:
-  create-release:
+  create_release:
     name: Create Release
     runs-on: ubuntu-latest
     outputs:
