--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -32,10 +32,10 @@ jobs:
   release_assets:
     name: Release assets
     needs: create_release # we need to know the upload URL
-    runs-on: ${{ matrix.config.os }} # we run many different builds
+    runs-on: ${{ matrix.platform }} # we run many different builds
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
         rust:
           - stable
           - beta
@@ -76,7 +76,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.create_release.outputs.upload_url }}
-          asset_name: artem-${{ matrix.config.os }}
+          asset_name: artem-${{ matrix.platform }}
           asset_path: ./target/release/artem
           asset_content_type: application/octet-stream
 
@@ -84,10 +84,10 @@ jobs:
   release_deb:
     name: Create Debian
     needs: create_release # we need to know the upload URL
-    runs-on: ${{ matrix.config.os }} # we run many different builds
+    runs-on: ${{ matrix.platform }} # we run many different builds
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        platform: [ubuntu-latest]
         rust:
           - stable
           - beta
