--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -10,32 +10,37 @@ on:
     # tags:
     # - "[0-9]+.[0-9]+.[0-9]+"
 jobs:
-  create_release:
-    name: Create Release
-    runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.release.outputs.upload_url }}
-    steps:
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          #save as draft to manually release it later and add the body from changelog
-          draft: true
-          #while version is still below 1.0.0, mark the release as a prerelease
-          prerelease: true
+  # create_release:
+  #   name: Create Release
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     upload_url: ${{ steps.release.outputs.upload_url }}
+  #   steps:
+  #     - name: Create release
+  #       id: create_release
+  #       uses: actions/create-release@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         tag_name: ${{ github.ref }}
+  #         release_name: Release ${{ github.ref }}
+  #         #save as draft to manually release it later and add the body from changelog
+  #         draft: true
+  #         #while version is still below 1.0.0, mark the release as a prerelease
+  #         prerelease: true
 
   release_assets:
     name: Release assets
-    needs: create_release # we need to know the upload URL
+    # needs: create_release # we need to know the upload URL
     runs-on: ${{ matrix.platform }} # we run many different builds
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: [ubuntu-latest, 
+        #disable macos since it is 10x more expensive and currently not needed 
+        #macos-latest, 
+        #same with windows
+        #windows-latest
+        ]
         rust:
           - stable
           - beta
@@ -70,15 +75,12 @@ jobs:
           command: build 
           args: --locked --release --verbose
 
-      - name: Upload release assets
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload Debian Package
+        uses: softprops/action-gh-release@v1
         with:
-          upload_url: ${{ needs.create_release.outputs.upload_url }}
-          asset_name: artem-${{ matrix.platform }}
-          asset_path: ./target/release/artem
-          asset_content_type: application/octet-stream
+          files: ./target/release/artem
+          draft: true
+          prerelease: true
 
 
   release_deb:
@@ -119,7 +121,7 @@ jobs:
         uses: actions-rs/cargo@v1
         continue-on-error: false 
         with:
-          command: deb
+          command: install deb
 
       - name: Run cargo deb
         uses: actions-rs/cargo@v1
@@ -128,11 +130,8 @@ jobs:
           command: deb
 
       - name: Upload Debian Package
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
-          upload_url: ${{ needs.create_release.outputs.upload_url }}
-          asset_name: artem-${{ matrix.config.os }}
-          asset_path: ./target/release/artem
-          asset_content_type: application/octet-stream
+          files: ./target/debian/*.deb
+          draft: true
+          prerelease: true
