fixing release again

--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -3,8 +3,10 @@
 
 name: release
 on:
-  release:
-    types: [created]
+  [push]
+  # release:
+  #   types: [created]
+
 jobs:
 
   release_assets:
@@ -58,7 +60,7 @@ jobs:
 
       - name: Compress release files
         shell: bash
-        run: tar -czvf artem--v${PROJECT_VERSION}-${{ matrix.platform }}.tar.gz target/release/artem
+        run: tar -czvf artem--v$PROJECT_VERSION-${{ matrix.platform }}.tar.gz target/release/artem
 
       - name: Upload Release Build
         uses: softprops/action-gh-release@v1
