--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -66,7 +66,7 @@ jobs:
       - name: Upload Release Build
         uses: softprops/action-gh-release@v1
         with:
-          files: artem--v${{ PROJECT_VERSION }}-${{ matrix.platform }}.tar.gz
+          files: artem--v${{ env.PROJECT_VERSION }}-${{ matrix.platform }}.tar.gz
           draft: true
           prerelease: true
 
