--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -45,28 +45,33 @@ jobs:
     name: Test Suite
     strategy:
       matrix:
-        platform: [ubuntu-latest, 
+        job:
+          - { target: aarch64-unknown-linux-gnu   , os: ubuntu-20.04, use-cross: true }
+          - { target: arm-unknown-linux-gnueabihf , os: ubuntu-20.04, use-cross: true }
+          - { target: arm-unknown-linux-musleabihf, os: ubuntu-20.04, use-cross: true }
+
+        # platform: [ubuntu-latest, 
         #disable macos since it is 10x more expensive and currently not needed 
         #macos-latest, 
         #same with windows
         #windows-latest
-        ]
-        rust:
-          - stable
-          - beta
-          - nightly
-          - 1.58.1  # MSRV
+        # ]
+        # rust:
+        #   - stable
+        #   - beta
+        #   - nightly
+        #   - 1.58.1  # MSRV
       #tests should pass on all platforms
-    runs-on: ${{ matrix.platform }}
+    runs-on: ${{ matrix.job.os }}
     timeout-minutes: 25
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
 
-      - name: Install ${{ matrix.rust }} toolchain
+      - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: ${{ matrix.rust }}
+          toolchain: stable
           profile: minimal
           override: true
       #use caching for cargo build 
@@ -85,14 +90,18 @@ jobs:
         uses: actions-rs/cargo@v1
         continue-on-error: false 
         with:
+          use-cross: ${{ matrix.job.use-cross }}
           command: build 
-          args: --locked --verbose
+          args: --locked --verbose --target=${{ matrix.job.target }}
 
       - name: Run tests
         uses: actions-rs/cargo@v1
         continue-on-error: false 
         with:
           command: test
+          args: --locked --target=${{ matrix.job.target }}
+          use-cross: ${{ matrix.job.use-cross }}
+
 
   clippy:
     name: Clippy
