--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -86,11 +86,6 @@ jobs:
           - beta
           - nightly
           - 1.58.1  # MSRV
-        target:
-          #x64 linux
-          -  x86_64-unknown-linux-gnu
-          #arm linux
-          -  aarch64-unknown-linux-gnu
       #tests should pass on all platforms
     runs-on: ${{ matrix.platform }}
     timeout-minutes: 25
@@ -117,13 +112,10 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build artem
-        if: contains(${{ matrix.target }}, "x86_64")
         uses: actions-rs/cargo@v1
         continue-on-error: false 
         with:
           command: build 
-          use-cross: true
-          args: --locked --verbose --target=${{ matrix.target }}
 
       - name: Run tests
         if: contains(${{ matrix.target }}, "x86_64")
@@ -131,5 +123,4 @@ jobs:
         continue-on-error: false 
         with:
           command: test
-          use-cross: true
-          args: --locked --verbose --target=${{ matrix.target }}
+          args: --locked --verbose
