--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,12 @@ name = "artem"
 version = "0.6.0"
 authors = ["Jonathan (@FineFindus)"]
 edition = "2021"
-description = "An easy program to convert an image to an ascii image"
+description = "artem is a small cli program written in rust to easily convert images to ascii art"
 readme = "README.md"
 license-file = "LICENSE"
 homepage = "https://github.com/finefindus/artem"
 repository = "https://github.com/finefindus/artem"
 catogories = ["command-line-utilities"]
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 #build file
 build = "build.rs"
