--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -195,8 +195,7 @@ jobs:
 
   release_deb:
     name: Create Debian
-    # needs: create_release # we need to know the upload URL
-    runs-on: ${{ matrix.platform }} # we run many different builds
+    runs-on: ${{ matrix.platform }} 
     strategy:
       matrix:
         platform: [ubuntu-latest]
@@ -258,3 +257,24 @@ jobs:
           files: ./target/debian/*.deb
           draft: true
           prerelease: true
+
+cargo_publish:
+    name: Publish to Cargo
+    # update the cargo version, using cargo publish.
+    # this can fail, so it should be locally checked with cargo publish --dry-run before
+    runs-on: ${{ matrix.platform }} 
+    strategy:
+      matrix:
+        platform: [ubuntu-latest]
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+      - uses: actions-rs/cargo@v1
+        continue-on-error: false
+        with:
+          command: publish
+          args: --token ${{ secrets.CARGO_API_KEY }}
